# C_TEXT_PARSER

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
data/: sample.txt
include/: logger.h  parser.h
src/: logger.c  main.c  parser.c
tests/: test_parser.c
